--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "x_growth_bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "get_impressions.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "puppeteer install",
+    "start": "node get_impressions.js"
   },
   "keywords": [],
   "author": "",
